Changes in list.gsp

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -31,6 +31,7 @@ default.optimistic.locking.failure=Another user has updated this {0} while you w
 
 # operation
 default.delete.label=Delete
+default.preview.label=Preview
 default.list.label=List Files
 default.all.delete.label=Delete All Remote Files
 default.select.label=Select File
