register gsp page modified password eye-icon placed inside textfield gsp page ready for reset and change password

--- a/grails-app/i18n/messages_cs.properties
+++ b/grails-app/i18n/messages_cs.properties
@@ -53,3 +53,12 @@ typeMismatch.java.lang.Long=Položka {0} musí být validní číslo
 typeMismatch.java.lang.Short=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigDecimal=Položka {0} musí být validní číslo
 typeMismatch.java.math.BigInteger=Položka {0} musí být validní číslo
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
