--- a/grails-app/i18n/messages_da.properties
+++ b/grails-app/i18n/messages_da.properties
@@ -53,4 +53,13 @@ typeMismatch.java.lang.Long=Feltet {0} skal være et valid tal
 typeMismatch.java.lang.Short=Feltet {0} skal være et valid tal
 typeMismatch.java.math.BigDecimal=Feltet {0} skal være et valid tal
 typeMismatch.java.math.BigInteger=Feltet {0} skal være et valid tal
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
 
