--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -53,3 +53,12 @@ typeMismatch.java.lang.Long=La propiedad {0} debe ser un número válido
 typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
