--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -53,3 +53,12 @@ typeMismatch.java.lang.Long=Attribuut {0} is geen geldig nummer
 typeMismatch.java.lang.Short=Attribuut {0} is geen geldig nummer
 typeMismatch.java.math.BigDecimal=Attribuut {0} is geen geldig nummer
 typeMismatch.java.math.BigInteger=Attribuut {0} is geen geldig nummer
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
