--- a/grails-app/i18n/messages_pt_BR.properties
+++ b/grails-app/i18n/messages_pt_BR.properties
@@ -57,3 +57,12 @@ typeMismatch.java.lang.Long=O campo {0} deve ser um número válido.
 typeMismatch.java.lang.Short=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigDecimal=O campo {0} deve ser um número válido.
 typeMismatch.java.math.BigInteger=O campo {0} deve ser um número válido.
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
