--- a/grails-app/i18n/messages_zh_CN.properties
+++ b/grails-app/i18n/messages_zh_CN.properties
@@ -16,3 +16,12 @@ default.not.unique.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u7684\u503C[{2}]\u
 default.null.message=[{1}]\u7C7B\u7684\u5C5E\u6027[{0}]\u4E0D\u80FD\u4E3Anull
 default.paginate.next=\u4E0B\u9875
 default.paginate.prev=\u4E0A\u9875
+springSecurity.change.password.header=Change Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.register.email.label=Email Address
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.reset.password.header=Reset Password
