--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -77,11 +77,19 @@ flash.message.replace.file=File is already there in remote location. File replac
 # Register Page
 springSecurity.register.header=Register Here
 springSecurity.register.button=Register
+springSecurity.submit.button=Submit
 springSecurity.register.title=Register
 springSecurity.register.role=Role
 springSecuirity.register.account=Don't have an account? 
 springSecuirity.have.account=Already have an account?
 springSecurity.login.reenter.password.label=Re-Enter Password
+flash.message.password.mismatch=Password and Re-Password mismatch
+flash.message.register.success=You are Successfully registered.Please Login
+flash.message.register.fail=Register Failed
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
 
 # Denied Page
 springSecurity.denied.title=Denied
@@ -102,6 +110,22 @@ springSecurity.login.button=Login
 springSecurity.login.username.label=Username
 springSecurity.login.password.label=Password
 springSecurity.login.remember.me.label=Remember me
+
+
+# Change Password
+default.button.change=Change Password
+springSecurity.change.password.title=Change Password
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+
+
+# Reset Password
+default.button.reset=Reset Password
+flash.message.new.password.mismatch=New password and Confirm New Password not match
+springSecurity.reset.password.title=Reset Password
+springSecurity.reset.password.header=Reset Password
 
 
 # Tooltip message
@@ -125,3 +149,5 @@ default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
+
+
