--- a/grails-app/i18n/messages_it.properties
+++ b/grails-app/i18n/messages_it.properties
@@ -53,3 +53,12 @@ typeMismatch.java.lang.Long=La proprietà {0} deve essere un numero valido
 typeMismatch.java.lang.Short=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigDecimal=La proprietà {0} deve essere un numero valido
 typeMismatch.java.math.BigInteger=La proprietà {0} deve essere un numero valido
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
