--- a/grails-app/i18n/messages_pl.properties
+++ b/grails-app/i18n/messages_pl.properties
@@ -57,3 +57,12 @@ typeMismatch.java.lang.Long=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.lang.Short=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.math.BigDecimal=Właściwość {0} musi być poprawnyą liczbą
 typeMismatch.java.math.BigInteger=Właściwość {0} musi być poprawnyą liczbą
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
