--- a/grails-app/i18n/messages_ru.properties
+++ b/grails-app/i18n/messages_ru.properties
@@ -29,3 +29,12 @@ typeMismatch.java.lang.Long=Значение поля {0} не является 
 typeMismatch.java.lang.Short=Значение поля {0} не является допустимым числом
 typeMismatch.java.math.BigDecimal=Значение поля {0} не является допустимым числом
 typeMismatch.java.math.BigInteger=Значение поля {0} не является допустимым числом
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
