--- a/grails-app/i18n/messages_sv.properties
+++ b/grails-app/i18n/messages_sv.properties
@@ -53,3 +53,12 @@ typeMismatch.java.lang.Long=Värdet {0} måste vara ett giltigt heltal
 typeMismatch.java.lang.Short=Värdet {0} måste vara ett giltigt heltal
 typeMismatch.java.math.BigDecimal=Värdet {0} måste vara ett giltigt nummer
 typeMismatch.java.math.BigInteger=Värdet {0} måste vara ett giltigt heltal
+springSecurity.register.firstname.label=First Name
+springSecurity.register.lastname.label=last Name
+springSecurity.register.email.label=Email Address
+springSecurity.register.mobilenumber.label=Mobile Number
+springSecurity.change.password.header=Change Password
+springSecurity.current.password.label=Current Password
+springSecurity.new.password.label=New Password
+springSecurity.confirm.password.label=Confirm New Password
+springSecurity.reset.password.header=Reset Password
