--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -87,7 +87,7 @@ flash.message.password.mismatch=Password and Re-Password mismatch
 flash.message.register.success=You are Successfully registered.Please Login
 flash.message.register.fail=Register Failed
 springSecurity.register.firstname.label=First Name
-springSecurity.register.lastname.label=last Name
+springSecurity.register.lastname.label=Last Namel
 springSecurity.register.email.label=Email Address
 springSecurity.register.mobilenumber.label=Mobile Number
 
@@ -119,6 +119,9 @@ springSecurity.change.password.header=Change Password
 springSecurity.current.password.label=Current Password
 springSecurity.new.password.label=New Password
 springSecurity.confirm.password.label=Confirm New Password
+springsecurity.change.password.fail=Fail to change password
+springsecurity.change.password.success=Successfully Change Password.Please Login
+flash.message.choose.different.password=Please choose a different password from your current one
 
 
 # Reset Password
@@ -126,6 +129,8 @@ default.button.reset=Reset Password
 flash.message.new.password.mismatch=New password and Confirm New Password not match
 springSecurity.reset.password.title=Reset Password
 springSecurity.reset.password.header=Reset Password
+springsecurity.reset.password.success=Successfully Reset Password.Please login
+springsecurity.reset.password.fail=Fail to Reset Password
 
 
 # Tooltip message
