video played from webapp folder.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -155,4 +155,5 @@ default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 
-
+default.preview.label=Preview
+flash.message.file.cannot.previewed=File cannot be previewed
