implemented pdf preview.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -157,3 +157,28 @@ default.edit.label=Edit {0}
 
 default.preview.label=Preview
 flash.message.file.cannot.previewed=File cannot be previewed
+
+#------------------------------------------messages----------------------------------------
+command.execute.case=\nput -F or -f to copy a file\n\
+  put -l or -L to list all files\n\
+  put -d or -D to delete files\n\
+  put -r or -R to read Subject of Unread mails in specific email folders
+command.execute.jar=\nFollow the commands:\nCopy a file: java -jar <jarname.jar> -f <filename>\n\
+  List all files: java -jar <jarname.jar> -l\nDelete a file: java -jar <jarname.jar> -d <filename> \n\
+  Delete all files:  java -jar <jarname.jar> -d "*" \n\
+  Read Subjects of unread mails: java -jar <jarname.jar> -r <Email_foldername>\n\n\
+  Note: filename should be in .pdf,.csv,.txt,.xml and .xlsx format only!\n\nException occured:\n
+subject.of.mail=File upload Mail
+success.message.mail=mail has been sent successfully.
+success.copy.message=File has been uploaded successfully.
+success.list.message=Files available in the location are:\n
+success.delete.message=File has been deleted Successfully!
+success.delete.all.files=All Files are deleted Successfully!
+file.not.found.message=Sorry,File is not there !
+files.not.found=Sorry,No files are there!
+invalid.filesize=File size can not be more than 10MB
+invalid.message=Wrong Sourcepath or Wrong Filename or Invalid File Type.\nNote:The file will be in .pdf, .csv, .xlsx, .xml, .txt Format only !
+processing.message=Uploading ...
+sms.body.message=You have uploaded a file: {0}
+success.message.sent=sms has been sent successfully
+mail.body=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
