show,edit-My profile,change password,reset password feature implemented

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -42,14 +42,17 @@ default.button.delete.label=Delete
 default.button.logout=Logout
 default.email.checkbox=Send email
 default.sms.checkbox=Send SMS
+default.button.cancel=cancel
+default.button.ok=Ok
+default.button.submit=Submit
 
 
 default.home.page=Home
 default.user.name=Username:\n\n
 default.path=D:\\File\\
 
-
 # Messages
+default.dropdown.choose.action=Choose Action
 alert.while.uploading=Please choose a file!
 welcome.utils.tool=Welcome to File Management Tool
 perform.file.listing=Listing Of Files
@@ -77,7 +80,6 @@ flash.message.replace.file=File is already there in remote location. File replac
 # Register Page
 springSecurity.register.header=Register Here
 springSecurity.register.button=Register
-springSecurity.submit.button=Submit
 springSecurity.register.title=Register
 springSecurity.register.role=Role
 springSecuirity.register.account=Don't have an account? 
@@ -87,9 +89,28 @@ flash.message.password.mismatch=Password and Re-Password mismatch
 flash.message.register.success=You are Successfully registered.Please Login
 flash.message.register.fail=Register Failed
 springSecurity.register.firstname.label=First Name
-springSecurity.register.lastname.label=Last Namel
+springSecurity.register.lastname.label=Last Name
 springSecurity.register.email.label=Email Address
 springSecurity.register.mobilenumber.label=Mobile Number
+flash.message.incorrect.captcha=Please provide valid captcha
+
+# My Profile
+default.button.myprofile=My Profile
+flash.message.user.warn=can not fetch empty fileds
+default.user.details=User Details
+default.myprofile.header=My Profile
+default.myprofile.firstname=First Name:
+default.myprofile.lastname=Last Name:
+default.myprofile.email=Email Address:
+default.myprofile.mobilenumber=Mobile Number: 
+default.myprofile.username=Username: 
+myprofile.update.user.success=Your profile is updated successfully
+
+# User Management
+default.listuser.header=Users
+default.user.listing.label=List Users
+default.button.createuser=Create User
+default.button.deleteuser=Delete User
 
 # Denied Page
 springSecurity.denied.title=Denied
@@ -120,8 +141,9 @@ springSecurity.current.password.label=Current Password
 springSecurity.new.password.label=New Password
 springSecurity.confirm.password.label=Confirm New Password
 springsecurity.change.password.fail=Fail to change password
-springsecurity.change.password.success=Successfully Change Password.Please Login
+springsecurity.change.password.success=Your Password has been changed.Please Login
 flash.message.choose.different.password=Please choose a different password from your current one
+flash.message.incorrect.current.password=Current password is incorrect
 
 
 # Reset Password
@@ -155,9 +177,10 @@ default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 
+# Preview Controller
+
 default.preview.label=Preview
 flash.message.file.cannot.previewed=File cannot be previewed
-
 #------------------------------------------messages----------------------------------------
 command.execute.case=\nput -F or -f to copy a file\n\
   put -l or -L to list all files\n\
@@ -182,3 +205,5 @@ processing.message=Uploading ...
 sms.body.message=You have uploaded a file: {0}
 success.message.sent=sms has been sent successfully
 mail.body=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
+springSecurity.submit.button=Submit
+
