show,edit-My profile,change password,reset password feature implemented

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -207,3 +207,5 @@ success.message.sent=sms has been sent successfully
 mail.body=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
 springSecurity.submit.button=Submit
 
+springSecurity.submit.button=Submit
+
