Registration page modified

--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -26,3 +26,4 @@ springSecurity.current.password.label=Current Password
 springSecurity.new.password.label=New Password
 springSecurity.confirm.password.label=Confirm New Password
 springSecurity.reset.password.header=Reset Password
+springSecurity.login.captcha.label=Captcha
