--- a/grails-app/i18n/messages_zh_CN.properties
+++ b/grails-app/i18n/messages_zh_CN.properties
@@ -19,6 +19,7 @@ default.paginate.prev=\u4E0A\u9875
 springSecurity.change.password.header=Change Password
 springSecurity.confirm.password.label=Confirm New Password
 springSecurity.current.password.label=Current Password
+springSecurity.login.captcha.label=Captcha
 springSecurity.new.password.label=New Password
 springSecurity.register.email.label=Email Address
 springSecurity.register.firstname.label=First Name
