--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -84,10 +84,13 @@ springSecuirity.register.account=Don't have an account?
 springSecuirity.have.account=Already have an account?
 springSecurity.login.reenter.password.label=Re-Enter Password
 flash.message.password.mismatch=Password and Re-Password mismatch
+flash.message.incorrect.captcha = Incorrect Captcha
+captcha.mismatch = Captcha is not Correct
+login.failed = "Incorrect coordinates value or wrong credentials
 flash.message.register.success=You are Successfully registered.Please Login
 flash.message.register.fail=Register Failed
 springSecurity.register.firstname.label=First Name
-springSecurity.register.lastname.label=Last Namel
+springSecurity.register.lastname.label=Last Name
 springSecurity.register.email.label=Email Address
 springSecurity.register.mobilenumber.label=Mobile Number
 
@@ -154,6 +157,7 @@ default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
+springSecurity.login.captcha.label=Captcha
 
 default.preview.label=Preview
 flash.message.file.cannot.previewed=File cannot be previewed
