--- a/grails-app/i18n/messages_da.properties
+++ b/grails-app/i18n/messages_da.properties
@@ -62,4 +62,5 @@ springSecurity.current.password.label=Current Password
 springSecurity.new.password.label=New Password
 springSecurity.confirm.password.label=Confirm New Password
 springSecurity.reset.password.header=Reset Password
+springSecurity.login.captcha.label=Captcha
 
