Create_User Controller and Gsp created eye-icon placed inside password field of Register gsp page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -180,7 +180,6 @@ default.edit.label=Edit {0}
 
 # Preview Controller
 
-default.preview.label=Preview
 flash.message.file.cannot.previewed=File cannot be previewed
 #------------------------------------------messages----------------------------------------
 command.execute.case=\nput -F or -f to copy a file\n\
@@ -206,7 +205,11 @@ processing.message=Uploading ...
 sms.body.message=You have uploaded a file: {0}
 success.message.sent=sms has been sent successfully
 mail.body=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
-springSecurity.submit.button=Submit
 
 springSecurity.submit.button=Submit
+default.add.user.button=Create User
+flash.message.create.user.sucess=New user has been created successfully
+flash.message.create.user.fail=Fail to create new user
+springSecurity.createuser.header=Create User
+springSecurity.createuser.title=Create User
 
