search with exact name working.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -46,6 +46,8 @@ default.sms.checkbox=Send SMS
 default.button.cancel=cancel
 default.button.ok=Ok
 default.button.submit=Submit
+default.button.search =Search
+default.search.placeholder=Search
 
 
 default.home.page=Home
@@ -62,7 +64,7 @@ check.database.files=Available Files in DataBase
 default.button.delete.confirm.message=Are you sure?
 default.admin.user.role=If You are an ADMIN user, You are allowed to Upload Files in remote location, List Files, Delete a file from Remote location or all files at a time
 default.client.user.role=This is File Management Tool. You are allowed to Upload Files in remote location and List all Remote Files and Database Files. Delete a file from Remote location or all files at a time
-
+perform.file.preview=PDF Reader
 # Flash Messages
 flash.message.success=Done
 flash.message.all.files.delete= File(s) from Remote Location have been deleted Successfully!
@@ -76,6 +78,8 @@ flash.message.db.warn=No Files found in Database Table
 flash.message.remote.warn=No files found in Remote location
 flash.message.check.connectivity=Can not access Remote location.Check your Connectivity!
 flash.message.replace.file=File is already there in remote location. File replaced
+flash.message.search.not.found.warn=No results Found
+flash.message.file.name.empty.warn=Enter the filename to search.
 
 
 # Register Page
@@ -87,7 +91,6 @@ springSecuirity.register.account=Don't have an account?
 springSecuirity.have.account=Already have an account?
 springSecurity.login.reenter.password.label=Re-Enter Password
 flash.message.password.mismatch=Password and Re-Password mismatch
-flash.message.incorrect.captcha = Incorrect Captcha
 captcha.mismatch = Captcha is not Correct
 login.failed = "Incorrect coordinates value or wrong credentials
 flash.message.register.success=You are Successfully registered.Please Login
