--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -104,6 +104,7 @@ flash.message.incorrect.captcha=Please provide valid captcha
 # My Profile
 default.button.myprofile=My Profile
 flash.message.user.warn=can not fetch empty fileds
+flash.message.edituser.warn=Unable to save user details.Some mandatory fields are left blank
 default.user.details=User Details
 default.myprofile.header=My Profile
 default.myprofile.firstname=First Name:
@@ -219,4 +220,9 @@ flash.message.create.user.sucess=New user has been created successfully
 flash.message.create.user.fail=Fail to create new user
 springSecurity.createuser.header=Create User
 springSecurity.createuser.title=Create User
+perform.edit.user=Edit user
+default.myprofile.dialog.save=save changes
+default.myprofile.dialog.close=close
+default.myprofile.dialog.title=edit profile
+
 
