User delete And Reset password implemented

--- a/grails-app/i18n/messages_ru.properties
+++ b/grails-app/i18n/messages_ru.properties
@@ -39,3 +39,5 @@ springSecurity.new.password.label=New Password
 springSecurity.confirm.password.label=Confirm New Password
 springSecurity.reset.password.header=Reset Password
 springSecurity.login.captcha.label=Captcha
+flash.message.user.delete=has been successfully deleted
+flash.message.user.error.delete=You cannot delete logged in user
