--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -93,6 +93,7 @@ springSecurity.login.reenter.password.label=Re-Enter Password
 flash.message.password.mismatch=Password and Re-Password mismatch
 captcha.mismatch = Captcha is not Correct
 login.failed = "Incorrect coordinates value or wrong credentials
+login.failed = Incorrect coordinates value or wrong credentials
 flash.message.register.success=You are Successfully registered.Please Login
 flash.message.register.fail=Register Failed
 springSecurity.register.firstname.label=First Name
@@ -225,4 +226,5 @@ default.myprofile.dialog.save=save changes
 default.myprofile.dialog.close=close
 default.myprofile.dialog.title=edit profile
 
+flash.message.user.delete=has been successfully deleted
 
