Single file list is showing in list file page. def is changed to string where needed.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -33,7 +33,7 @@ default.optimistic.locking.failure=Another user has updated this {0} while you w
 default.delete.label=Delete
 default.preview.label=Preview
 default.list.label=List Files
-default.all.delete.label=Delete All Remote Files
+default.all.delete.label=Delete All Files
 default.select.label=Select File
 default.upload.label=Upload
 default.button.create.label=Create
@@ -59,25 +59,19 @@ default.dropdown.choose.action=Choose Action
 alert.while.uploading=Please choose a file!
 welcome.utils.tool=Welcome to File Management Tool
 perform.file.listing=Listing Of Files
-check.remote.files=Available Files in Remote Location
-check.database.files=Available Files in DataBase
 default.button.delete.confirm.message=Are you sure?
-default.admin.user.role=If You are an ADMIN user, You are allowed to Upload Files in remote location, List Files, Delete a file from Remote location or all files at a time
-default.client.user.role=This is File Management Tool. You are allowed to Upload Files in remote location and List all Remote Files and Database Files. Delete a file from Remote location or all files at a time
 perform.file.preview=PDF Reader
 # Flash Messages
 flash.message.success=Done
-flash.message.all.files.delete= File(s) from Remote Location have been deleted Successfully!
+flash.message.all.files.delete=All files have been deleted Successfully!
 flash.message.file.upload=File has been uploaded successfully!
-flash.message.file.delete=File from Remote Location has been deleted successfully!
+flash.message.file.delete=File has been deleted successfully!
 flash.message.no.files.found=Sorry! No files found 
 flash.message.sms=SMS has been sent successfully!
 flash.message.email=Mail has been sent successfully!
 flash.message.invalid.file=Invalid File size or check file format.file will be in .pdf, .csv, .xlsx, .xml, .txt Format only !
-flash.message.db.warn=No Files found in Database Table
-flash.message.remote.warn=No files found in Remote location
 flash.message.check.connectivity=Can not access Remote location.Check your Connectivity!
-flash.message.replace.file=File is already there in remote location. File replaced
+flash.message.replace.file=File is already there. File replaced.
 flash.message.search.not.found.warn=No results Found
 flash.message.file.name.empty.warn=Enter the filename to search.
 
