File size and creation date are saved into database. Upload button is disabled while file uploading.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,7 +56,7 @@ default.path=D:\\File\\
 
 # Messages
 default.dropdown.choose.action=Choose Action
-alert.while.uploading=Please choose a file!
+default.choose.file=Choose File
 welcome.utils.tool=Welcome to File Management Tool
 perform.file.listing=Listing Of Files
 default.button.delete.confirm.message=Are you sure?
