Change language feature is added with Bengali language. Upload folder is added with dummy files.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -177,7 +177,7 @@ default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
-springSecurity.login.captcha.label=Captcha
+springSecurity.login.captcha.label=Enter Captcha
 
 # Preview Controller
 
@@ -225,3 +225,8 @@ auto.generate.password.yes=Yes
 auto.generate.password.no=No
 springSecurity.login.coordinate.value=Enter Coordinate Value
 
+#Language
+
+default.change.language=Change Language
+language.en=English
+language.bn=Bengali
