--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -227,7 +227,9 @@ auto.generate.password.yes=Yes
 auto.generate.password.no=No
 springSecurity.login.coordinate.value=Enter Coordinate Value
 
+main.page.user.welcome=welcome,
 main.title=Solutionsd
+main.upload.title=Upload Page
 main.index.head.title = Dashboard
 side.bar.index.head.title = Dashboard
 side.bar.index.overview.title = Overview
@@ -243,6 +245,10 @@ main.index.box.video.title = Videos
 main.index.label.list.all.files= List Files
 upload.choose.file.message = Chhose File
 upload.title.message =Upload
+main.file.list.file.name.head = FileName
+main.file.list.thumbnail.head= Thumbnail
+main.file.list.action.icon.head=Action
+default.button.change.password =Change Password
 #Language
 
 default.change.language=Change Language
