Change language button is updated. File size and creation date are showing in new tab in file listing page. File preview issue with small extension is solved. New messages are translated to Bengali.

--- a/grails-app/i18n/messages_bn.properties
+++ b/grails-app/i18n/messages_bn.properties
@@ -56,7 +56,6 @@ default.path=D:\\File\\
 
 # Messages
 default.dropdown.choose.action=নির্বাচন করুন
-default.choose.file=ফাইল পছন্দ কর
 welcome.utils.tool=ফাইল পরিচালনা সরঞ্জামে আপনাকে স্বাগতম
 perform.file.listing=ফাইল তালিকা
 default.button.delete.confirm.message=তুমি কি নিশ্চিত?
@@ -230,6 +229,30 @@ register.sex.male=পুরুষ
 springSecurity.register.date.label=জন্ম তারিখ
 default.myprofile.sex=লিঙ্গ
 default.myprofile.dateofbirth=জন্ম তারিখ
+
+main.page.user.welcome=স্বাগত,
+main.title=সলিউশন
+main.upload.title=পৃষ্ঠা আপলোড করুন
+main.index.head.title = ড্যাশবোর্ড
+side.bar.index.head.title = ড্যাশবোর্ড
+side.bar.index.overview.title = সংক্ষিপ্ত বিবরণ
+side.bar.index.upload.title = আপলোড
+side.bar.index.list.user.title = ব্যবহারকারীদের তালিকা
+side.bar.index.delete.all.files.title = সমস্ত ফাইল মুছুন
+main.index.my.dashboard.title = আমার ড্যাশবোর্ড
+main.index.box.all.files.title = সকল নথি
+main.index.box.document.title = কাগজপত্র
+main.index.box.ppt.title = পিপিটি
+main.index.box.images.title = চিত্র
+main.index.box.video.title = ভিডিও
+main.index.label.list.all.files = তালিকা ফাইল
+upload.choose.file.message = ফাইল পছন্দ কর
+upload.title.message = আপলোড
+main.file.list.file.name.head = ফাইলের নাম
+main.file.list.file.size.head = ফাইলের আকার
+main.file.list.creation.date.head = ফাইল তৈরির তারিখ
+main.file.list.preview.head = পূর্বরূপ
+main.file.list.action.icon.head = কর্ম
 
 #Language
 default.change.language=ভাষা পরিবর্তন করুন
