--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,7 +56,6 @@ default.path=D:\\File\\
 
 # Messages
 default.dropdown.choose.action=Choose Action
-default.choose.file=Choose File
 welcome.utils.tool=Welcome to File Management Tool
 perform.file.listing=Listing Of Files
 default.button.delete.confirm.message=Are you sure?
@@ -232,7 +231,7 @@ springSecurity.register.date.label=Date of Birth
 default.myprofile.sex=Sex
 default.myprofile.dateofbirth=Date of Birth
 
-main.page.user.welcome=welcome,
+main.page.user.welcome=Welcome,
 main.title=Solutionsd
 main.upload.title=Upload Page
 main.index.head.title = Dashboard
@@ -247,13 +246,15 @@ main.index.box.document.title = Documents
 main.index.box.ppt.title = Ppts
 main.index.box.images.title = Images
 main.index.box.video.title = Videos
-main.index.label.list.all.files= List Files
-upload.choose.file.message = Chhose File
-upload.title.message =Upload
-main.file.list.file.name.head = FileName
-main.file.list.thumbnail.head= Thumbnail
-main.file.list.action.icon.head=Action
-default.button.change.password =Change Password
+main.index.label.list.all.files = List Files
+upload.choose.file.message = Choose File
+upload.title.message = Upload
+main.file.list.file.name.head = File Name
+main.file.list.file.size.head = File Size
+main.file.list.creation.date.head = File Creation Date
+main.file.list.preview.head = Preview
+main.file.list.action.icon.head = Action
+
 #Language
 default.change.language=Change Language
 language.en=English
