Settings menu created.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -69,6 +69,7 @@ flash.message.check.connectivity=Can not access Remote location.Check your Conne
 flash.message.replace.file=File is already there. File replaced.
 flash.message.search.not.found.warn=No results Found
 flash.message.file.name.empty.warn=Enter the filename to search.
+flash.message.file.size.mismatch=File Size is more than the accepted value.
 # Register Page
 springSecurity.register.header=Register Here
 springSecurity.register.button=Register
@@ -215,6 +216,7 @@ side.bar.index.overview.title=Overview
 side.bar.index.upload.title=Upload
 side.bar.index.list.user.title=List Users
 side.bar.index.delete.all.files.title=Delete All Files
+side.bar.index.settings.title=Settings
 main.index.my.dashboard.title=My Dashboard
 main.index.box.all.files.title=All Files
 main.index.box.document.title=Documents
@@ -229,6 +231,7 @@ main.file.list.file.size.head=File Size
 main.file.list.creation.date.head=File Creation Date
 main.file.list.preview.head=Preview
 main.file.list.action.icon.head=Action
+default.button.change.password =Change Password
 #Language
 default.change.language=Change Language
 language.en=English
