--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -79,7 +79,7 @@ springSecuirity.have.account=Already have an account?
 springSecurity.login.reenter.password.label=Confirm Password
 captcha.mismatch=Captcha is not Correct
 login.failed=Incorrect coordinates value or wrong credentials
-flash.message.register.success=You are Successfully registered.Please Login
+flash.message.register.success=You have successfully registered. Please Login to continue.
 flash.message.register.fail=Register Failed
 springSecurity.register.firstname.label=First Name
 springSecurity.register.lastname.label=Last Name
