Email and password tooltips are added. Upload file logic is updated. Change language color is updated.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -236,5 +236,5 @@ language.bn=Bengali
 default.email.format=abc@example.com
 check.username.available.no=This Username is already taken
 check.username.available.yes=Available
-default.password.format=Minimum 8 and maximum 15 characters, at least one uppercase letter, one lowercase letter, one number and one special character
-register.sex.others=Others
+default.password.format=Minimum 8 and maximum 20 characters, at least one uppercase letter, one lowercase letter, one number and one special character
+register.sex.others=Other
