--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -241,3 +241,7 @@ check.username.available.no=This Username is already taken
 check.username.available.yes=Available
 default.password.format=Minimum 8 and maximum 20 characters, at least one uppercase letter, one lowercase letter, one number and one special character
 register.sex.others=Other
+settings.max.size.file=Enter maximum size of file (in MB)
+placeholder.file.size=(MB)
+warning.setting.file.size=Please set maximum file size from settings menu, after that you can upload a file.
+alert.file.large=File is large, please select a file less than 
