--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -217,6 +217,7 @@ side.bar.index.upload.title=Upload
 side.bar.index.list.user.title=List Users
 side.bar.index.delete.all.files.title=Delete All Files
 side.bar.index.settings.title=Settings
+main.title.settings=Settings
 main.index.my.dashboard.title=My Dashboard
 main.index.box.all.files.title=All Files
 main.index.box.document.title=Documents
@@ -241,3 +242,6 @@ check.username.available.no=This Username is already taken
 check.username.available.yes=Available
 default.password.format=Minimum 8 and maximum 20 characters, at least one uppercase letter, one lowercase letter, one number and one special character
 register.sex.others=Other
+settings.form.set.max.file.size=Enter maximum size of file (in MB)
+settings.submit.button=Submit
+upload.file.size.set.warning.alert=Please set maximum file size from settings menu, after that you can upload a file.
