Changes in register and create user

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -187,7 +187,7 @@ success.message.sent=sms has been sent successfully
 mail.body=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
 springSecurity.submit.button=Submit
 default.add.user.button=Create User
-flash.message.create.user.sucess=New user has been created successfully
+flash.message.create.user.sucess = New user {0} {1} has been created successfully
 flash.message.create.user.fail=Fail to create new user
 springSecurity.createuser.header=Create User
 springSecurity.createuser.title=Create User
