--- a/grails-app/i18n/messages_bn.properties
+++ b/grails-app/i18n/messages_bn.properties
@@ -184,7 +184,7 @@ success.message.sent=এসএমএস সফলভাবে প্রেরণ
 mail.body=প্রিয় রিসিভার, আপনি একটি ফাইল আপলোড করেছেন:\n\n#\n\nধন্যবাদ!!
 springSecurity.submit.button=জমা দিন
 default.add.user.button=ব্যবহারকারী তৈরি করুন
-flash.message.create.user.sucess=নতুন ব্যবহারকারী সফলভাবে তৈরি করা হয়েছে
+flash.message.create.user.sucess=নতুন ব্যবহারকারী {0} {1} সফলভাবে তৈরি করা হয়েছে
 flash.message.create.user.fail=নতুন ব্যবহারকারী তৈরি করতে ব্যর্থ
 springSecurity.createuser.header=ব্যবহারকারী তৈরি করুন
 springSecurity.createuser.title=ব্যবহারকারী তৈরি করুন
