My profile page modified.validation partial working

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -93,11 +93,11 @@ flash.message.user.warn=can not fetch empty fileds
 flash.message.edituser.warn=Unable to save user details.Some mandatory fields are left blank
 default.user.details=User Details
 default.myprofile.header=My Profile
-default.myprofile.firstname=First Name:
-default.myprofile.lastname=Last Name:
-default.myprofile.email=Email Address:
-default.myprofile.mobilenumber=Mobile Number:
-default.myprofile.username=Username:
+default.myprofile.firstname=First Name
+default.myprofile.lastname=Last Name
+default.myprofile.email=Email Address
+default.myprofile.mobilenumber=Mobile Number
+default.myprofile.username=Username
 myprofile.update.user.success=Your profile is updated successfully
 # User Management
 default.listuser.header=Users
@@ -205,8 +205,8 @@ springSecurity.register.sex.label=Sex
 register.sex.female=Female
 register.sex.male=Male
 springSecurity.register.date.label=Date of Birth
-default.myprofile.sex=Sex:
-default.myprofile.dateofbirth=Date of Birth:
+default.myprofile.sex=Sex
+default.myprofile.dateofbirth=Date of Birth
 main.page.user.welcome=Welcome,
 main.title=Solutionsd
 main.upload.title=Upload Page
@@ -246,3 +246,4 @@ settings.max.size.file=Enter maximum size of file (in MB)
 placeholder.file.size=(MB)
 warning.setting.file.size=Please set maximum file size from settings menu, after that you can upload a file.
 alert.file.large=File is large, please select a file less than 
+flash.message.choose.user.warn=No user found.Choose user to Reset Password
