Updated settings code.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -210,6 +210,7 @@ default.myprofile.dateofbirth=Date of Birth
 main.page.user.welcome=Welcome,
 main.title=Solutionsd
 main.upload.title=Upload Page
+main.settings.title=settings
 main.index.head.title=Dashboard
 side.bar.index.head.title=Dashboard
 side.bar.index.overview.title=Overview
@@ -243,7 +244,8 @@ check.username.available.yes=Available
 default.password.format=Minimum 8 and maximum 20 characters, at least one uppercase letter, one lowercase letter, one number and one special character
 register.sex.others=Other
 settings.max.size.file=Enter maximum size of file (in MB)
-placeholder.file.size=(MB)
+settings.submit.button=Submit
+placeholder.file.size=File size in MB
 warning.setting.file.size=Please set maximum file size from settings menu, after that you can upload a file.
 alert.file.large=File is large, please select a file less than 
 flash.message.choose.user.warn=No user found.Choose user to Reset Password
