UI beautification, menu bar under one layout implementation, unwanted params and messages showing up in url issue fixed for reset password and create User, Settings jAlert added, with rendering issue resolved

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -187,7 +187,7 @@ success.message.sent=sms has been sent successfully
 mail.body=Dear Receiver, You have uploaded a file:\n\n#\n\nTHANK YOU!!
 springSecurity.submit.button=Submit
 default.add.user.button=Create User
-flash.message.create.user.sucess = New user {0} has been created successfully
+flash.message.create.user.success = New user {0} has been created successfully
 flash.message.create.user.fail=Fail to create new user
 springSecurity.createuser.header=Create User
 springSecurity.createuser.title=Create User
@@ -249,3 +249,4 @@ placeholder.file.size=File size in MB
 warning.setting.file.size=Please set maximum file size from settings menu, after that you can upload a file.
 alert.file.large=File is large, please select a file less than 
 flash.message.choose.user.warn=No user found.Choose user to Reset Password
+file.size.limit.save.alert= File size upload limit set to {0}
