--- a/grails-app/i18n/messages_bn.properties
+++ b/grails-app/i18n/messages_bn.properties
@@ -237,3 +237,4 @@ check.username.available.yes=সহজলভ্য
 default.password.format=সর্বনিম্ন 8 এবং সর্বোচ্চ 20 টি অক্ষর, কমপক্ষে একটি বড় হাতের অক্ষর, একটি ছোট হাতের অক্ষর, একটি সংখ্যা এবং একটি বিশেষ অক্ষর
 register.sex.others=অন্যান্য
 flash.message.choose.user.warn=কোনও ব্যবহারকারী পাওয়া যায় নি ,পাসওয়ার্ড পুনরায় সেট করতে ব্যবহারকারী চয়ন করুন
+file.size.limit.save.alert= File size upload limit set to {0}
