Changes in register and create user

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -59,7 +59,7 @@ perform.file.preview=PDF Reader
 # Flash Messages
 flash.message.success=Done
 flash.message.all.files.delete=All files have been deleted Successfully!
-flash.message.file.upload=File has been uploaded successfully!
+flash.message.file.upload=File {0} has been uploaded successfully!
 flash.message.file.delete=File has been deleted successfully!
 flash.message.no.files.found=Sorry! No files found 
 flash.message.sms=SMS has been sent successfully!
@@ -249,4 +249,6 @@ placeholder.file.size=File size in MB
 warning.setting.file.size=Please set maximum file size from settings menu, after that you can upload a file.
 alert.file.large=File is large, please select a file less than 
 flash.message.choose.user.warn=No user found.Choose user to Reset Password
+default.button.edit=Edit
+default.myprofile.username.role=Role
 file.size.limit.save.alert= File size upload limit set to {0}
