--- a/grails-app/i18n/messages_bn.properties
+++ b/grails-app/i18n/messages_bn.properties
@@ -57,7 +57,7 @@ perform.file.preview=পিডিএফ রিডার
 # Flash Messages
 flash.message.success=সম্পন্ন
 flash.message.all.files.delete=সমস্ত ফাইল সফলভাবে মুছে ফেলা হয়েছে!
-flash.message.file.upload=ফাইলটি সফলভাবে আপলোড করা হয়েছে!
+flash.message.file.upload=ফাইলটি {0} সফলভাবে আপলোড করা হয়েছে!
 flash.message.file.delete=ফাইলটি সফলভাবে মুছে ফেলা হয়েছে!
 flash.message.no.files.found=দুঃখিত! কোনও ফাইল পাওয়া যায় নি
 flash.message.sms=এসএমএস সফলভাবে পাঠানো হয়েছে!
@@ -214,6 +214,7 @@ side.bar.index.overview.title = সংক্ষিপ্ত বিবরণ
 side.bar.index.upload.title = আপলোড
 side.bar.index.list.user.title = ব্যবহারকারীদের তালিকা
 side.bar.index.delete.all.files.title = সমস্ত ফাইল মুছুন
+side.bar.index.settings.title = েটিংস
 side.bar.index.settings.title=সেটিংস
 main.title.settings=সেটিংস
 main.index.my.dashboard.title = আমার ড্যাশবোর্ড
@@ -232,6 +233,7 @@ main.file.list.preview.head = পূর্বরূপ
 main.file.list.action.icon.head = কর্ম
 #Language
 default.change.language=ভাষা পরিবর্তন করুন
+settings.max.size.file = ফাইলের সর্বোচ্চ আকার প্রবেশ করুন (এমবি তে)
 language.en=ইংরেজি
 language.bn=বাংলা
 default.email.format=abc@example.com
@@ -246,3 +248,5 @@ warning.setting.file.size=দয়া করে সেটিংস মেনু
 alert.file.large=ফাইল বড়, দয়া করে এর চেয়ে কম ফাইল নির্বাচন করুন 
 flash.message.choose.user.warn=কোনও ব্যবহারকারী পাওয়া যায় নি ,পাসওয়ার্ড পুনরায় সেট করতে ব্যবহারকারী চয়ন করুন
 file.size.limit.save.alert= File size upload limit set to {0}
+default.button.edit=Edit
+default.myprofile.username.role=Role
