--- a/grails-app/i18n/messages_ru.properties
+++ b/grails-app/i18n/messages_ru.properties
@@ -41,3 +41,6 @@ springSecurity.reset.password.header=Reset Password
 springSecurity.login.captcha.label=Captcha
 flash.message.user.delete=has been successfully deleted
 flash.message.user.error.delete=You cannot delete logged in user
+flash.message.file.size.mismatch=File Size is more than the accepted value
+default.button.edit=Edit
+default.myprofile.username.role=Role
