change in file delete alert

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -241,3 +241,17 @@ check.username.available.no=This Username is already taken
 check.username.available.yes=Available
 default.password.format=Minimum 8 and maximum 20 characters, at least one uppercase letter, one lowercase letter, one number and one special character
 register.sex.others=Other
+#Swal-Alert
+swal.change.alert=Are you Sure?
+swal.change.not.available=Once deleted, user will not be available!
+swal.change.not.available.file=Once deleted, file will not be available!
+swal.change.warning=warning
+swal.change.delete=Deleted!
+swal.change.user.delete=User has been deleted
+swal.change.file.delete=File has been deleted
+swal.change.file.delete.All=All files has been deleted
+swal.change.s=success
+swal.change.cancel=Cancelled
+swal.change.user.s=User is safe :)
+swal.change.file.s=File is open,cannot delete this file :)
+swal.change.error=error
