Reset password rendering and Alert message code modification; Image ' Sidebar Div' issue resolved; File Size limit jAlert added

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -137,8 +137,8 @@ default.button.reset=Reset Password
 flash.message.new.password.mismatch=New password and Confirm Password not match
 springSecurity.reset.password.title=Reset Password
 springSecurity.reset.password.header=Reset Password
-springsecurity.reset.password.success=Successfully Reset Password.
-springsecurity.reset.password.fail=Fail to Reset Password
+springsecurity.reset.password.success=Successfully Reset Password for user: {0}
+springsecurity.reset.password.fail=Fail to Reset Password for user: {0}
 # Tooltip message
 title.email.tooltip=Check this box to send email
 title.sms.tooltip=Check this box to send sms
