3 dots dropdown added in listUser, show user details for each user and update user details, Role of current user shown in my profile

--- a/grails-app/i18n/messages_bn.properties
+++ b/grails-app/i18n/messages_bn.properties
@@ -57,7 +57,7 @@ perform.file.preview=পিডিএফ রিডার
 # Flash Messages
 flash.message.success=সম্পন্ন
 flash.message.all.files.delete=সমস্ত ফাইল সফলভাবে মুছে ফেলা হয়েছে!
-flash.message.file.upload=ফাইলটি {0} সফলভাবে আপলোড করা হয়েছে!
+flash.message.file.upload=ফাইলটি সফলভাবে আপলোড করা হয়েছে!
 flash.message.file.delete=ফাইলটি সফলভাবে মুছে ফেলা হয়েছে!
 flash.message.no.files.found=দুঃখিত! কোনও ফাইল পাওয়া যায় নি
 flash.message.sms=এসএমএস সফলভাবে পাঠানো হয়েছে!
@@ -214,7 +214,6 @@ side.bar.index.overview.title = সংক্ষিপ্ত বিবরণ
 side.bar.index.upload.title = আপলোড
 side.bar.index.list.user.title = ব্যবহারকারীদের তালিকা
 side.bar.index.delete.all.files.title = সমস্ত ফাইল মুছুন
-side.bar.index.settings.title = েটিংস
 side.bar.index.settings.title=সেটিংস
 main.title.settings=সেটিংস
 main.index.my.dashboard.title = আমার ড্যাশবোর্ড
@@ -241,12 +240,16 @@ check.username.available.no=এই নাম আগেই এখানে আছ
 check.username.available.yes=সহজলভ্য
 default.password.format=সর্বনিম্ন 8 এবং সর্বোচ্চ 20 টি অক্ষর, কমপক্ষে একটি বড় হাতের অক্ষর, একটি ছোট হাতের অক্ষর, একটি সংখ্যা এবং একটি বিশেষ অক্ষর
 register.sex.others=অন্যান্য
-settings.max.size.file=ফাইলের সর্বোচ্চ আকার প্রবেশ করুন (এমবি তে)
 settings.submit.button=জমা দিন
 placeholder.file.size=এমবিতে ফাইলের আকার
 warning.setting.file.size=দয়া করে সেটিংস মেনু থেকে সর্বোচ্চ ফাইলের আকার সেট করুন, এর পরে আপনি কোনও ফাইল আপলোড করতে পারেন।
 alert.file.large=ফাইল বড়, দয়া করে এর চেয়ে কম ফাইল নির্বাচন করুন 
 flash.message.choose.user.warn=কোনও ব্যবহারকারী পাওয়া যায় নি ,পাসওয়ার্ড পুনরায় সেট করতে ব্যবহারকারী চয়ন করুন
+default.button.edituser=ব্যবহারকারী সম্পাদনা করুন
+default.header.user=ব্যবহারকারীর প্রমানপত্র
+flash.message.no.user.found=কোন ব্যবহারকারী পাওয়া যায় নি
+springsecurity.show.user.fail=ব্যবহারকারীর বিবরণ আনতে পারে না
 file.size.limit.save.alert= File size upload limit set to {0}
-default.button.edit=Edit
-default.myprofile.username.role=Role
+default.myprofile.username.role=ভূমিকা
+default.header.role=ভূমিকা আইডি
+default.myprofile.role=ভূমিকা
