--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -249,9 +249,14 @@ placeholder.file.size=File size in MB
 warning.setting.file.size=Please set maximum file size from settings menu, after that you can upload a file.
 alert.file.large=File is large, please select a file less than 
 flash.message.choose.user.warn=No user found.Choose user to Reset Password
-default.button.edit=Edit
+default.button.edituser=Edit User
+default.header.user=User ID
+flash.message.no.user.found=No user found
+springsecurity.show.user.fail=Can not fetch user details
 default.myprofile.username.role=Role
 file.size.limit.save.alert= File size upload limit set to {0}
+default.header.role=Role ID
+default.myprofile.role=Role
 #Swal-Alert
 swal.change.alert=Are you Sure?
 swal.change.not.available=Once deleted, user will not be available!
