Partial search functionality is added in file listing. File counts are showing while searching.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -256,7 +256,7 @@ default.header.user=User ID
 flash.message.no.user.found=No user found
 springsecurity.show.user.fail=Can not fetch user details
 default.myprofile.username.role=Role
-file.size.limit.save.alert= File size upload limit set to {0}
+file.size.limit.save.alert= File size upload limit set to {0} MB
 default.header.role=Role ID
 default.myprofile.role=Role
 #Swal-Alert
