edit user and edit userRole-done jalert message implemented after successful user edit

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -274,3 +274,4 @@ swal.change.cancel=Cancelled
 swal.change.user.s=User is safe :)
 swal.change.file.s=File is open,cannot delete this file :)
 swal.change.error=error
+update.user.success=User {0} has been updated successfully
