--- a/grails-app/i18n/messages_bn.properties
+++ b/grails-app/i18n/messages_bn.properties
@@ -270,3 +270,4 @@ swal.change.cancel=বাতিল করা হয়েছে
 swal.change.user.s=ব্যবহারকারী নিরাপদ :)
 swal.change.file.s=ফাইলটি উন্মুক্ত, এই ফাইলটি মুছতে পারে না :)
 swal.change.error=ত্রুটি
+update.user.success=ব্যবহারকারী {0} সফলভাবে আপডেট করা হয়েছে
